--- a/nitroaddon.css
+++ b/nitroaddon.css
@@ -223,7 +223,7 @@
 .theme-light .markup__75297 a span {
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
-  background: var(--background-gradient-highest, var(--background-primary));
+  background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
 }
 .theme-dark .embed__623de.embedFull__623de,
 .theme-light .embed__623de.embedFull__623de {
